<resources>
    <string name="app_name">RadarDog</string>
    <!-- menu -->
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_user_profile">Perfil</string>
    <string name="menu_drawer_race_register">Cadastrar Raça</string>
    <string name="menu_drawer_dog_register">Cadastre Seu Cachorro</string>
    <string name="menu_drawer_logout">Sair</string>
    <string name="menu_header_profile">Perfil</string>

    <!-- login -->

    <string name="btn_login_enter">Entrar</string>
    <string name="msg_login">Usuário e/ou senha inválidos!</string>
    <string name="msg_logged">Logado com sucesso</string>
    <string name="txt_no_account">Não tem cadastro?</string>
    <string name="txt_title_login">Login</string>
    <string name="txt_layout_email">E-mail</string>
    <string name="txt_layout_password">Senha</string>
    <string name="txt_layout_name">Nome</string>
    <string name="btn_user_login">Login</string>
    <string name="btn_user_cadastrar">Cadastrar</string>
    <string name="txt_layout_forgot_password">Esqueceu a senha?</string>
    <string name="btn_ok_resetar_senha">Enviar</string>
    <string name="msg_resetar_email">Verifique seu E-mail para continuar.</string>
    <string name="btn_cancel_resetar_senha">Cancelar</string>
    <string name="title_dialog_resetar_senha">Resetar Senha</string>


    <!-- Tela de Cadastro de Usuário -->
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="txt_title_new_user">Novo Usuário</string>
    <string name="msg_erro_password">A senha tem que possuir no mínimo 6 caracteres.</string>


    <!-- perfil do usuário-->

    <string name="user_info">Informações do Usuário</string>
    <string name="user_register_name">Nome</string>
    <string name="user_profile_surname">Sobrenome</string>
    <string name="btn_profile_save">Salvar</string>
    <string name="user_qtd_pets">Quantidade de Pets</string>
    <string name="user_profile_email">E-mail</string>
    <string name="user_cellphone">Telefone</string>
    <string name="user_cellphone2">Telefone Secundário</string>

    <!-- cachorro-->

    <string name="register_dog">Registrar Cachorro</string>
    <string name="att_dog">Atualizar Cachorro</string>
    <string name="dog_name">Nome do Cachorro</string>
    <string name="dog_gender">Sexo</string>
    <string name="dog_color">Cor do Cachorro</string>
    <string name="dog_last_seen_place">Endereço do Último Avistamento</string>
    <string name="start_search">Registrar</string>
    <string name="toggle_open">Abrir</string>
    <string name="toggle_close">Fechar</string>
    <string name="txt_enter">Entrar</string>
    <string name="dog_breed">Raça</string>
    <string name="dog_description">Descrição</string>

    <!-- Main -->

    <string name="txt_ultimos_registros"> Últimos Registros</string>
    <string name="menu_drawer_login">Login</string>

</resources>