<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/menu_drawer_home"
        android:icon="@drawable/icon_home_foreground"/>

    <item android:id="@+id/nav_account"
        android:title="@string/menu_drawer_user_profile"
        android:icon="@drawable/icon_user_foreground"/>

    <item android:id="@+id/nav_register_category"
        android:title="@string/menu_drawer_race_register"
        android:icon="@mipmap/icon_dog_foreground"/>

    <item android:id="@+id/nav_register_item"
        android:title="@string/menu_drawer_dog_register"
        android:icon="@mipmap/icon_race_foreground"/>

    <item android:id="@+id/nav_logout"
        android:title="@string/menu_drawer_logout"
        android:icon="@drawable/icon_logout_foreground"/>

</menu>